kubernetes/organization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
  labels:
    app: organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
        - name: organization
          image: hsedjame/organization:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: organization
  labels:
    app: organization
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: organization
